tests/errors/cpp_err1.f90
program cpp_err1
implicit none

#if 2 < 1+2+
#endif

print *, 'OK'

end program
